src/parse/DreamParser.cpp

// Generated from ./Dream.g4 by ANTLR 4.13.2


#include "DreamListener.h"

#include "DreamParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DreamParserStaticData final {
  DreamParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DreamParserStaticData(const DreamParserStaticData&) = delete;
  DreamParserStaticData(DreamParserStaticData&&) = delete;
  DreamParserStaticData& operator=(const DreamParserStaticData&) = delete;
  DreamParserStaticData& operator=(DreamParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag dreamParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<DreamParserStaticData> dreamParserStaticData = nullptr;

void dreamParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (dreamParserStaticData != nullptr) {
    return;
  }
#else
  assert(dreamParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DreamParserStaticData>(
    std::vector<std::string>{
      "program", "packageDecl", "importStmt", "packageName", "importName", 
      "funCallStmt", "stmt", "binaryOpExpr", "funVarDeclaration", "argList", 
      "literal", "arrayInit", "castExpr", "assign", "unaryOpExpr", "ifStmt", 
      "ifBlock", "atomExpr", "ifStmtBody", "returnStmt", "elseIfClause", 
      "elseClause", "expr", "assignExpr", "declaration", "varDeclaration", 
      "varModifiers", "functionDeclaration", "classVarDecl", "classFuncDecl", 
      "funBlock", "funStmt", "funModifiers", "classDeclaration", "classModifiers", 
      "classModifier", "classBlock", "classBody", "classStmt", "classMemberModifier", 
      "constructorDecl", "classFunStmtBlock", "throwStmt", "synchronizedStmt", 
      "tryCatchStmt", "catches", "catchClause", "catchFormalParameter", 
      "catchType", "finally_", "memberModifier", "visibilityModifier", "staticModifier", 
      "interfaceDeclaration", "interfaceBlock", "interfaceBody", "interfaceVarDecl", 
      "interfaceFuncDecl", "annotationDeclaration", "annotationBlock", "annotation", 
      "qualifiedName", "paramList", "param", "type", "singleType", "arrayType", 
      "returnType", "forStmt", "forCondition", "forBlock", "forBody", "forVarDecl", 
      "fileCodeBlock", "fileCodeBlockBody", "fileCodeBlockStmt", "funCodeBlock", 
      "funCodeBlockBody", "funCodeBlockStmt"
    },
    std::vector<std::string>{
      "", "'return'", "'if'", "'else'", "'for'", "'while'", "'package'", 
      "'import'", "'break'", "'continue'", "'try'", "'catch'", "'finally'", 
      "'var'", "'imt'", "'fun'", "'class'", "'enum'", "'interface'", "'annotation'", 
      "'public'", "'private'", "'protected'", "'static'", "'new'", "'override'", 
      "'native'", "'synchronized'", "'throw'", "", "", "", "", "'true'", 
      "'false'", "'byte'", "'short'", "'int'", "", "'ushort'", "'long'", 
      "'ulong'", "'llong'", "'ullong'", "'float'", "'double'", "'bool'", 
      "'char'", "'string'", "'void'", "'const'", "'@'", "'/'", "'='", "';'", 
      "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "", "", "", "'.'", 
      "'!'", "'\\u003F'", "':'", "'%'", "'+'", "'-'", "'*'", "'<'", "'>'", 
      "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'&'", "'|'", "'^'", 
      "'<<'", "'>>'", "'>>>'", "", "'~'", "'++'", "'--'"
    },
    std::vector<std::string>{
      "", "RETURN", "IF", "ELSE", "FOR", "WHILE", "PACKAGE", "IMPORT", "BREAK", 
      "CONTINUE", "TRY", "CATCH", "FINALLY", "VAR", "IMT", "FUN", "CLASS", 
      "ENUM", "INTERFACE", "ANNOTATION", "PUBLIC", "PRIVATE", "PROTECTED", 
      "STATIC", "NEW", "OVERRIDE", "NATIVE", "SYNCHRONIZED", "THROW", "STRING_LITERAL", 
      "CHAR_LITERAL", "INT_LITERAL", "FLOAT_LITERAL", "TRUE_LITERAL", "FALSE_LITERAL", 
      "BYTE", "SHORT", "INT", "UINT", "USHORT", "LONG", "ULONG", "LONGLONG", 
      "ULONGLONG", "FLOAT", "DOUBLE", "BOOL", "CHAR", "STRING", "VOID", 
      "CONST", "AT", "SLASH", "ASSIGN", "SEMICOLON", "LPAREN", "RPAREN", 
      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "LINE_COMMENT", "COMMENT", 
      "WS", "DOT", "BANG", "QUESTION", "COLON", "MOD", "PLUS", "MINUS", 
      "MUL", "LT", "GT", "LE", "GE", "EQ", "NEQ", "AND", "OR", "BIT_AND", 
      "BIT_OR", "XOR", "LSHIFT", "RSHIFT", "URSHIFT", "NOT", "TIBLE", "INC", 
      "DEC", "IDENTIFIER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  dreamParserStaticData = std::move(staticData);
}

}

DreamParser::DreamParser(TokenStream *input) : DreamParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

DreamParser::DreamParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  DreamParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *dreamParserStaticData->atn, dreamParserStaticData->decisionToDFA, dreamParserStaticData->sharedContextCache, options);
}

DreamParser::~DreamParser() {
  delete _interpreter;
}

const atn::ATN& DreamParser::getATN() const {
  return *dreamParserStaticData->atn;
}

std::string DreamParser::getGrammarFileName() const {
  return "Dream.g4";
}

const std::vector<std::string>& DreamParser::getRuleNames() const {
  return dreamParserStaticData->ruleNames;
}

const dfa::Vocabulary& DreamParser::getVocabulary() const {
  return dreamParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView DreamParser::getSerializedATN() const {
  return dreamParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

DreamParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DreamParser::ProgramContext::EOF() {
  return getToken(DreamParser::EOF, 0);
}

DreamParser::PackageDeclContext* DreamParser::ProgramContext::packageDecl() {
  return getRuleContext<DreamParser::PackageDeclContext>(0);
}

std::vector<DreamParser::ImportStmtContext *> DreamParser::ProgramContext::importStmt() {
  return getRuleContexts<DreamParser::ImportStmtContext>();
}

DreamParser::ImportStmtContext* DreamParser::ProgramContext::importStmt(size_t i) {
  return getRuleContext<DreamParser::ImportStmtContext>(i);
}

std::vector<DreamParser::StmtContext *> DreamParser::ProgramContext::stmt() {
  return getRuleContexts<DreamParser::StmtContext>();
}

DreamParser::StmtContext* DreamParser::ProgramContext::stmt(size_t i) {
  return getRuleContext<DreamParser::StmtContext>(i);
}

std::vector<DreamParser::FileCodeBlockContext *> DreamParser::ProgramContext::fileCodeBlock() {
  return getRuleContexts<DreamParser::FileCodeBlockContext>();
}

DreamParser::FileCodeBlockContext* DreamParser::ProgramContext::fileCodeBlock(size_t i) {
  return getRuleContext<DreamParser::FileCodeBlockContext>(i);
}


size_t DreamParser::ProgramContext::getRuleIndex() const {
  return DreamParser::RuleProgram;
}

void DreamParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void DreamParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

DreamParser::ProgramContext* DreamParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, DreamParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == DreamParser::PACKAGE) {
      setState(158);
      packageDecl();
    }
    setState(164);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DreamParser::IMPORT) {
      setState(161);
      importStmt();
      setState(166);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(171);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 763922536652071956) != 0) || ((((_la - 70) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 70)) & 4063235) != 0)) {
      setState(169);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case DreamParser::IF:
        case DreamParser::FOR:
        case DreamParser::TRY:
        case DreamParser::VAR:
        case DreamParser::IMT:
        case DreamParser::FUN:
        case DreamParser::CLASS:
        case DreamParser::ENUM:
        case DreamParser::INTERFACE:
        case DreamParser::ANNOTATION:
        case DreamParser::NEW:
        case DreamParser::SYNCHRONIZED:
        case DreamParser::STRING_LITERAL:
        case DreamParser::CHAR_LITERAL:
        case DreamParser::INT_LITERAL:
        case DreamParser::FLOAT_LITERAL:
        case DreamParser::TRUE_LITERAL:
        case DreamParser::FALSE_LITERAL:
        case DreamParser::BYTE:
        case DreamParser::SHORT:
        case DreamParser::INT:
        case DreamParser::UINT:
        case DreamParser::LONG:
        case DreamParser::ULONG:
        case DreamParser::LONGLONG:
        case DreamParser::ULONGLONG:
        case DreamParser::FLOAT:
        case DreamParser::DOUBLE:
        case DreamParser::BOOL:
        case DreamParser::CHAR:
        case DreamParser::STRING:
        case DreamParser::AT:
        case DreamParser::SLASH:
        case DreamParser::LPAREN:
        case DreamParser::LBRACK:
        case DreamParser::PLUS:
        case DreamParser::MINUS:
        case DreamParser::NOT:
        case DreamParser::TIBLE:
        case DreamParser::INC:
        case DreamParser::DEC:
        case DreamParser::IDENTIFIER: {
          setState(167);
          stmt();
          break;
        }

        case DreamParser::LBRACE: {
          setState(168);
          fileCodeBlock();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(173);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(174);
    match(DreamParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageDeclContext ------------------------------------------------------------------

DreamParser::PackageDeclContext::PackageDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DreamParser::PackageDeclContext::PACKAGE() {
  return getToken(DreamParser::PACKAGE, 0);
}

DreamParser::PackageNameContext* DreamParser::PackageDeclContext::packageName() {
  return getRuleContext<DreamParser::PackageNameContext>(0);
}

tree::TerminalNode* DreamParser::PackageDeclContext::SEMICOLON() {
  return getToken(DreamParser::SEMICOLON, 0);
}


size_t DreamParser::PackageDeclContext::getRuleIndex() const {
  return DreamParser::RulePackageDecl;
}

void DreamParser::PackageDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPackageDecl(this);
}

void DreamParser::PackageDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPackageDecl(this);
}

DreamParser::PackageDeclContext* DreamParser::packageDecl() {
  PackageDeclContext *_localctx = _tracker.createInstance<PackageDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, DreamParser::RulePackageDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(176);
    match(DreamParser::PACKAGE);
    setState(177);
    packageName();
    setState(178);
    match(DreamParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStmtContext ------------------------------------------------------------------

DreamParser::ImportStmtContext::ImportStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DreamParser::ImportStmtContext::IMPORT() {
  return getToken(DreamParser::IMPORT, 0);
}

DreamParser::ImportNameContext* DreamParser::ImportStmtContext::importName() {
  return getRuleContext<DreamParser::ImportNameContext>(0);
}

tree::TerminalNode* DreamParser::ImportStmtContext::SEMICOLON() {
  return getToken(DreamParser::SEMICOLON, 0);
}


size_t DreamParser::ImportStmtContext::getRuleIndex() const {
  return DreamParser::RuleImportStmt;
}

void DreamParser::ImportStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStmt(this);
}

void DreamParser::ImportStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStmt(this);
}

DreamParser::ImportStmtContext* DreamParser::importStmt() {
  ImportStmtContext *_localctx = _tracker.createInstance<ImportStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, DreamParser::RuleImportStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(180);
    match(DreamParser::IMPORT);
    setState(181);
    importName();
    setState(182);
    match(DreamParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageNameContext ------------------------------------------------------------------

DreamParser::PackageNameContext::PackageNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> DreamParser::PackageNameContext::IDENTIFIER() {
  return getTokens(DreamParser::IDENTIFIER);
}

tree::TerminalNode* DreamParser::PackageNameContext::IDENTIFIER(size_t i) {
  return getToken(DreamParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> DreamParser::PackageNameContext::DOT() {
  return getTokens(DreamParser::DOT);
}

tree::TerminalNode* DreamParser::PackageNameContext::DOT(size_t i) {
  return getToken(DreamParser::DOT, i);
}


size_t DreamParser::PackageNameContext::getRuleIndex() const {
  return DreamParser::RulePackageName;
}

void DreamParser::PackageNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPackageName(this);
}

void DreamParser::PackageNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPackageName(this);
}

DreamParser::PackageNameContext* DreamParser::packageName() {
  PackageNameContext *_localctx = _tracker.createInstance<PackageNameContext>(_ctx, getState());
  enterRule(_localctx, 6, DreamParser::RulePackageName);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    match(DreamParser::IDENTIFIER);
    setState(189);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DreamParser::DOT) {
      setState(185);
      match(DreamParser::DOT);
      setState(186);
      match(DreamParser::IDENTIFIER);
      setState(191);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportNameContext ------------------------------------------------------------------

DreamParser::ImportNameContext::ImportNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> DreamParser::ImportNameContext::IDENTIFIER() {
  return getTokens(DreamParser::IDENTIFIER);
}

tree::TerminalNode* DreamParser::ImportNameContext::IDENTIFIER(size_t i) {
  return getToken(DreamParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> DreamParser::ImportNameContext::DOT() {
  return getTokens(DreamParser::DOT);
}

tree::TerminalNode* DreamParser::ImportNameContext::DOT(size_t i) {
  return getToken(DreamParser::DOT, i);
}


size_t DreamParser::ImportNameContext::getRuleIndex() const {
  return DreamParser::RuleImportName;
}

void DreamParser::ImportNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportName(this);
}

void DreamParser::ImportNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DreamListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportName(this);
}

DreamParser::ImportNameContext* DreamParser::importName() {
  ImportNameContext *_localctx = _tracker.createInstance<ImportNameContext>(_ctx, getState());
  enterRule(_localctx, 8, DreamParser::RuleImportName);
  size_t _la = 0;
